<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">Rendezvous</string>
    <string name="email">%1$s</string>
    <string name="settings_change_language">Change Language</string>
    <string name="settings_city">City</string>
    <string name="settings_editAccount">Edit Account</string>
    <string name="settings_name">Name</string>
    <string name="settings_username">Username</string>
    <string name="settings_email">Email</string>
    <string name="settings_phoneNumber">Phone Number</string>
    <string name="settings_address">Address</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_category_account">Account</string>
    <string name="settings_category_general">General</string>
    <string name="settings_help">Help</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_notifyMeBefore">Notify Me Before</string>
    <string name="settings_emailNotification">Email Notification</string>
    <string name="settings_pushNotification">Push Notification</string>
    <string name="settings_category_aboutUs">About Us</string>
    <string name="settings_aboutUs">About Us</string>
    <string name="signup_hint_name">Name</string>
    <string name="signup_hint_email">Email</string>
    <string name="signup_hint_password">Password</string>
    <string name="signup_hint_rePassword">Re-enter password</string>
    <string name="signup_createAccount">Create Account</string>
    <string name="login_userName">User Name</string>
    <string name="login_username">Password</string>
    <string name="login_forgotPassword">Forgot Password</string>
    <string name="login_rememberMe">Remember me</string>
    <string name="login_LOGIN">LOG IN</string>
    <string name="login_SIGNUP">SIGN UP</string>
    <string name="aboutUs_Description">This is a CS102 project program written by Burak MANDIRA, Talha UYAR, Muhammed USMAN, Ömer SAKARYA, Orhun KAR in Bilkent Univercity. Copyright© 2015.</string>
    <string name="organizer">By:</string>
    <string name="organizer_value">burak</string>
    <string name="event_name">Whiplash</string>
    <string name="date">Date:</string>
    <string name="date_value">01/05/2015</string>
    <string name="time">Time:</string>
    <string name="time_value">03:34 PM</string>
    <string name="address">Address:</string>
    <string name="address_value">1604.Street Bilkent Univercity Cankaya/Ankara</string>
    <string name="city">City:</string>
    <string name="city_value">Ankara</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="description">Description:</string>
    <string name="description_value">This a normal event that you can come and go. I\'m kidding mate. This event is just a testing.</string>
    <string name="NumOfSubscribers">Number of\nSubscribers:</string>
    <string name="NumberOfSubscribersValue">179</string>
    <string name="subscribe">Subscribe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Test</string>
    <string name="cinema">Cinema</string>
    <string name="concert">Concert</string>
    <string name="theatre">Theatre</string>
    <string name="seminar">Seminar</string>
    <string name="party">Party</string>
    <string name="other">Other</string>
    <string name="camera">Add a photo</string>
    <string name="progress1">Step 1/2</string>
    <string name="progress2">Step 2/2</string>
    <string name="time_add">Time:</string>
    <string name="date_add">Date:</string>
    <string name="quota">Quota:</string>
    <string name="add_event">Done</string>
    <string name="alcohol">Alcohol</string>
    <string name="meal">Meal</string>
    <string name="title_activity_cinema">Cinema</string>
    <string name="title_activity_concert">Concert</string>
    <string name="title_activity_theatre">Theatre</string>
    <string name="title_activity_seminar">Seminar</string>
    <string name="title_activity_party">Party</string>
    <string name="title_activity_other">Other</string>
    <string name="rate">Rate:</string>
    <string name="comment">Comment:</string>
    <string name="add_comment">Add Comment</string>
    <string name="bVideo">Video</string>
    <string name="prompt">Choose a city</string>
    <string name="action_settings_help">Settings</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="add_event_help">Adding an Event</string>
    <string name="search_event">Searching an Event</string>
    <string name="settings">Settings</string>
    <string name="verification">Verification</string>
    <string name="ratings">Ratings</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_adding__event">Adding an Event</string>
    <string name="title_activity_searching__event">Searching an Event</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_verification">Verification</string>
    <string name="title_activity_ratings">Ratings</string>
    <string name="account_1">This is the “Log In” screen.You can log in with your username and password if you have an account already. If you do not have an account, you can click the Sign Up button.</string>
    <string name="account_2">After you click signup, you will be presented by the screen below. You can fill out the required information and then press signup to make an account on Rendezvous.</string>
    <string name="profile_1">This is your profile. You can access it by clicking the profile icon in the icon bar. It contains all the information about the you such as your name, profile picture, username, sex, email, verification status etc. You can change your profile picture by clicking on the profile picture. Clicking on it will give the you an option of changing the picture by using an existing photo or capturing a new one. Your profile also shows the no. of your followers, the no. of people you are following, the events you are going to and the events you are organizing. All of this information is shown in the yellow bar in the top right hand corner. It also contains your approval rate among other users.</string>
    <string name="profile_2">You can access the profiles of other users by clicking on their profile pictures. You can see all of their current events and past events, their followers and their following and their verification status and approval rate from their profiles as shown below.</string>
    <string name="add_1">To add a new event, press the plus button on the right side of the search bar as shown in the picture below.</string>
    <string name="add_2">Once you press the plus button, you will be take to the screen shown below. To add the event, fill out the required information and press the done button. </string>
    <string name="search_1">To search for an event, click on the search bar on the home screen and enter the event name, type, place or date.</string>
    <string name="search_2">To filter out the search results according to date, city, type and popularity, you can swipe right on the left side of the screen which will bring up the side bar from where you can set the filter options.</string>
    <string name="settings_detail">You can access the settings page by clicking the settings icon on the action bar. The settings page contains the options for changing your account\'s password, getting notifications, changing language and city and getting help.</string>
    <string name="verify">Rendezvous has a verification feature which ensures that users are trustable and the events they are organizing are real and not some trolls. It is highly recommended that you verify yourself. If you want to verify yourself just click the verify button in your profile after which the Rendezvous team which consider your application. </string>
    <string name="rating_1">Rendezvous has a rating system through which you can rate other user\'s events. This allows the users to see that if a user is good at organizing events and whether their events will be worth attending. To rate an event, go to the event page after the event has ended and click the stars.</string>
    <string name="rating_2">Once you click the stars you will be taken to a new screen where you can add a comment about the event and rate the event after you enter the key, if supplied by the organizer. </string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
